Refactor code for annotations

--- a/l10n/ja/viewer.properties
+++ b/l10n/ja/viewer.properties
@@ -110,11 +110,11 @@ loading_error=PDF の読み込み中にエラーが発生しました
 invalid_file_error=無効または破損した PDF ファイル
 missing_file_error=PDF ファイルが見つかりません。
 
-# LOCALIZATION NOTE (text_annotation_type): This is used as a tooltip.
+# LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
 # the PDF spec (32000-1:2008 Table 169 – Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
-text_annotation_type=[{{type}} 注釈]
+text_annotation_type.alt=[{{type}} 注釈]
 request_password=PDF はパスワードによって保護されています
 
 printing_not_supported=警告：このブラウザでは印刷が完全にサポートされていません
