--- a/l10n/pl/viewer.properties
+++ b/l10n/pl/viewer.properties
@@ -110,11 +110,11 @@ loading_error=Wystąpił błąd podczas wczytywania pliku PDF.
 invalid_file_error=Błędny lub uszkodzony plik PDF.
 missing_file_error=Nie znaleziono pliku PDF.
 
-# LOCALIZATION NOTE (text_annotation_type): This is used as a tooltip.
+# LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
 # the PDF spec (32000-1:2008 Table 169 - Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
-text_annotation_type=[Komentarz {{type}}]
+text_annotation_type.alt=[Komentarz {{type}}]
 request_password=Plik PDF jest chroniony przez hasło:
 
 printing_not_supported=Ostrzeżenie: Drukowanie nie jest w pełni obsługiwane przez tę przeglądarkę.
