--- a/l10n/da/viewer.properties
+++ b/l10n/da/viewer.properties
@@ -114,7 +114,7 @@ missing_file_error=Manglende PDF-fil
 # "{{type}}" vil blive ersattet af en kommentar type fra en liste
 # defineret i PDF specifikationen (32000-1:2008 Table 169 – Annotation types).
 # Nogle almindelige typer er f.eks.: "Check", "Text", "Comment" og "Note"
-text_annotation_type=[{{type}} Kommentar]
+text_annotation_type.alt=[{{type}} Kommentar]
 request_password=PDF filen er beskyttet med et kodeord:
 invalid_password=Ugyldigt kodeord.
 
