--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -110,11 +110,11 @@ loading_error=An error occurred while loading the PDF.
 invalid_file_error=Invalid or corrupted PDF file.
 missing_file_error=Missing PDF file.
 
-# LOCALIZATION NOTE (text_annotation_type): This is used as a tooltip.
+# LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
 # the PDF spec (32000-1:2008 Table 169 – Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
-text_annotation_type=[{{type}} Annotation]
+text_annotation_type.alt=[{{type}} Annotation]
 request_password=PDF is protected by a password:
 invalid_password=Invalid Password.
 
