--- a/l10n/nl/viewer.properties
+++ b/l10n/nl/viewer.properties
@@ -110,11 +110,11 @@ loading_error=Er is een fout opgetreden bij het laden van het PDF-bestand.
 invalid_file_error=Ongeldig of corrupt PDF-bestand.
 missing_file_error=Ontbrekend PDF-bestand.
 
-# LOCALIZATION NOTE (text_annotation_type): This is used as a tooltip.
+# LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
 # the PDF spec (32000-1:2008 Table 169 – Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
-text_annotation_type=[{{type}}-aantekening]
+text_annotation_type.alt=[{{type}}-aantekening]
 request_password=Dit PDF-bestand is beveiligd met een wachtwoord:
 
 printing_not_supported=Waarschuwing: afdrukken wordt niet volledig ondersteund door deze browser.
