--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -104,7 +104,7 @@ missing_file_error=遺失PDF檔案。
 # 其他標籤和訊息
 # "{{type}}" 用來表示PDF格式規範 (32000-1:2008 Table 169 – Annotation types) 入面所定義的註解種類。
 # 一些常見的類型有: "Check"、 "Text"、 "Comment"、 "Note"
-text_annotation_type=［{{type}} 註解］
+text_annotation_type.alt=［{{type}} 註解］
 request_password=PDF檔案受密碼保護：
 
 printing_not_supported=警告：這個瀏覽器不完全支援列印。
