Added Chrome extension's author

--- a/AUTHORS
+++ b/AUTHORS
@@ -14,6 +14,7 @@ Jakob Miland <saebekassebil@gmail.com>
 Julian Viereck
 Justin D'Arcangelo <justindarc@gmail.com>
 Kalervo Kujala
+Rob Wu <gwnRob@gmail.com>
 Shaon Barman <shaon.barman@gmail.com>
 Vivien Nicolas <21@vingtetun.org>
 Yury Delendik <ydelendik@mozilla.com>
