Detect and add fallback if document colors are disabled in Firefox - address comment

--- a/l10n/sv/viewer.properties
+++ b/l10n/sv/viewer.properties
@@ -122,4 +122,5 @@ request_password=PDF-filen är lösenordsskyddad:
 
 printing_not_supported=Varning: Utskrifter stöds inte fullt ut av denna webbläsare.
 printing_not_ready=Varning: Hela PDF-filen måste laddas innan utskrift kan ske.
-web_fonts_disabled=Webbtypsnitt är inaktiverade: Typsnitt inkluderade i PDF-filer kan ej användas.
+web_fonts_disabled=Webbtypsnitt är inaktiverade: Typsnitt inbäddade i PDF-filer kan ej användas.
+web_colors_disabled=Webbfärger är inaktiverade.
