--- a/l10n/ja/viewer.properties
+++ b/l10n/ja/viewer.properties
@@ -123,3 +123,4 @@ request_password=PDF はパスワードによって保護されています
 printing_not_supported=警告：このブラウザでは印刷が完全にサポートされていません
 printing_not_ready=警告：PDF を印刷するための読み込みが終了していません
 web_fonts_disabled=Web フォントが無効になっています: 埋め込まれた PDF のフォントを使用することができません
+web_colors_disabled=Web カラーが無効になっています
