Ask for password on failed decryption

--- a/l10n/da/viewer.properties
+++ b/l10n/da/viewer.properties
@@ -103,5 +103,6 @@ loading_error=Der skete en fejl under indlæsningen af PDF-filen
 # Nogle almindelige typer er f.eks.: "Check", "Text", "Comment" og "Note"
 text_annotation_type=[{{type}} Kommentar]
 request_password=PDF filen er beskyttet med et kodeord:
+invalid_password=Ugyldigt kodeord.
 
 printing_not_supported=Advarsel: Denne browser er ikke fuldt understøttet ved udskrift
