--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -119,6 +119,7 @@ missing_file_error=Missing PDF file.
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type=[{{type}} Annotation]
 request_password=PDF is protected by a password:
+invalid_password=Invalid Password.
 
 printing_not_supported=Warning: Printing is not fully supported by this browser.
 printing_not_ready=Warning: The PDF is not fully loaded for printing.
