--- a/l10n/es/viewer.properties
+++ b/l10n/es/viewer.properties
@@ -27,14 +27,14 @@ page_of=de {{pageCount}}
 
 zoom_out.title=Reducir
 zoom_out_label=Reducir
-zoom_in.title=Ampliar
-zoom_in_label=Ampliar
+zoom_in.title=Aumentar
+zoom_in_label=Aumentar
 zoom.title=Ampliación
 print.title=Imprimir
 print_label=Imprimir
-fullscreen.title=Pantalla completa
-fullscreen_label=Pantalla completa
-open_file.title=Abrir archivo
+presentation_mode.title=Cambiar al modo de presentación
+presentation_mode_label=Modo de presentación
+open_file.title=Abrir un archivo
 open_file_label=Abrir
 download.title=Descargar
 download_label=Descargar
@@ -44,11 +44,11 @@ bookmark_label=Vista actual
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
-toggle_slider.title=Alternar deslizador
-toggle_slider_label=Alternar deslizador
-outline.title=Mostrar esquema del documento
+toggle_sidebar.title=Mostrar u ocultar la barra lateral
+toggle_sidebar_label=Conmutar la barra lateral
+outline.title=Mostrar el esquema del documento
 outline_label=Esquema del documento
-thumbs.title=Mostrar miniaturas
+thumbs.title=Mostrar las miniaturas
 thumbs_label=Miniaturas
 findbar.title=Buscar en el documento
 findbar_label=Buscar
@@ -61,17 +61,31 @@ thumb_page_title=Página {{page}}
 # number.
 thumb_page_canvas=Miniatura de la página {{page}}
 
+# Context menu
+first_page.label=Ir a la primera página
+last_page.label=Ir a la última página
+page_rotate_cw.label=Girar a la derecha
+page_rotate_ccw.label=Girar a la izquierda
+
 # Find panel button title and messages
-find=Buscar
-find_terms_not_found=(No encontrado)
+find_label=Buscar:
+find_previous.title=Ir a la frase encontrada anterior
+find_previous_label=Anterior
+find_next.title=Ir a la frase encontrada siguiente
+find_next_label=Siguiente
+find_highlight=Resaltar todo
+find_match_case_label=Coincidir mayúsculas y minúsculas
+find_reached_top=Se alcanzó el inicio del documento, se continúa desde el final
+find_reached_bottom=Se alcanzó el final del documento, se continúa desde el inicio
+find_not_found=No se encontró la frase
 
 # Error panel labels
 error_more_info=Más información
 error_less_info=Menos información
 error_close=Cerrar
-# LOCALIZATION NOTE (error_build): "{{build}}" will be replaced by the PDF.JS
-# build ID.
-error_build=Compilación de PDF.JS: {{build}}
+# LOCALIZATION NOTE (error_version_info): "{{version}}" and "{{build}}" will be
+# replaced by the PDF.JS version and build ID.
+error_version_info=PDF.js v{{version}} (compilación: {{build}})
 # LOCALIZATION NOTE (error_message): "{{message}}" will be replaced by an
 # english string describing the error.
 error_message=Mensaje: {{message}}
@@ -82,23 +96,28 @@ error_stack=Pila: {{stack}}
 error_file=Archivo: {{file}}
 # LOCALIZATION NOTE (error_line): "{{line}}" will be replaced with a line number
 error_line=Línea: {{line}}
-rendering_error=Ocurrió un error mientras se renderizaba la página.
+rendering_error=Ocurrió un error al renderizar la página.
 
 # Predefined zoom values
-page_scale_width=Anchura de página
+page_scale_width=Anchura de la página
 page_scale_fit=Ajustar a la página
 page_scale_auto=Ampliación automática
 page_scale_actual=Tamaño real
 
 # Loading indicator messages
 loading_error_indicator=Error
-loading_error=Ocurrió un error mientras se cargaba el PDF.
+loading_error=Ocurrió un error al cargar el PDF.
+invalid_file_error=El archivo PDF no es válido o está dañado.
+missing_file_error=Falta el archivo PDF.
 
 # LOCALIZATION NOTE (text_annotation_type): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
 # the PDF spec (32000-1:2008 Table 169 – Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type=[Anotación {{type}}]
-request_password=El PDF está protegido con una contraseña:
+request_password=El archivo PDF está protegido por una contraseña:
 
-printing_not_supported=Aviso: La impresión no es compatible totalmente con este navegador.
+printing_not_supported=Aviso: Este navegador no es compatible completamente con la impresión.
+printing_not_ready=Aviso: El PDF no se ha cargado completamente para su impresión.
+web_fonts_disabled=Se han desactivado los tipos de letra web: no se pueden usar los tipos de letra incrustados en el PDF.
+web_colors_disabled=Se han desactivado los colores web.
