--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -120,4 +120,4 @@ request_password=PDF is protected by a password:
 printing_not_supported=Warning: Printing is not fully supported by this browser.
 printing_not_ready=Warning: The PDF is not fully loaded for printing.
 web_fonts_disabled=Web fonts are disabled: unable to use embedded PDF fonts.
-web_colors_disabled=Web colors are disabled.
+document_colors_disabled=PDF documents are not allowed to use their own colors: \'Allow pages to choose their own colors\' is deactivated in the browser.
