--- a/l10n/pl/viewer.properties
+++ b/l10n/pl/viewer.properties
@@ -120,4 +120,4 @@ request_password=Plik PDF jest chroniony przez hasło:
 printing_not_supported=Ostrzeżenie: Drukowanie nie jest w pełni obsługiwane przez tę przeglądarkę.
 printing_not_ready=Ostrzeżenie: Plik PDF nie jest całkowicie wczytany do drukowania.
 web_fonts_disabled=Web fonty są nieaktywne. Nie można korzystać z osadzonych czcionek w plikach PDF.
-web_colors_disabled=Kolory WWW są nieaktywne.
+document_colors_disabled=Dokumenty PDF nie mają pozwolenia na korzystanie z ich własnych kolorów: \'Pozwalaj stronom stosować inne kolory niż ustawione tutaj\' nie jest aktywne w przeglądarce.
