--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -110,4 +110,4 @@ request_password=PDF檔案受密碼保護：
 printing_not_supported=警告：這個瀏覽器不完全支援列印。
 printing_not_ready=警告：PDF檔案未完全加載以進行打印。
 web_fonts_disabled=禁止使用網路字型：無法使用嵌入PDF檔案的字型。
-web_colors_disabled=網絡顏色已被停用。
+document_colors_disabled=PDF文件不容許使用自己的顏色：瀏覽器的 “容許頁面選擇自己的顏色“ 選項已被停用。
