Add 'invalid_password' and 'document_colors_disabled' strings to Swedish l10n

--- a/l10n/sv/viewer.properties
+++ b/l10n/sv/viewer.properties
@@ -116,8 +116,9 @@ missing_file_error=PDF-filen saknas.
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type=[{{type}}-anteckning]
 request_password=PDF-filen är lösenordsskyddad:
+invalid_password=Felaktigt lösenord.
 
 printing_not_supported=Varning: Utskrifter stöds inte fullt ut av denna webbläsare.
 printing_not_ready=Varning: Hela PDF-filen måste laddas innan utskrift kan ske.
-web_fonts_disabled=Webbtypsnitt är inaktiverade: Typsnitt inbäddade i PDF-filer kan ej användas.
-web_colors_disabled=Webbfärger är inaktiverade.
+web_fonts_disabled=Webbtypsnitt är inaktiverade: Typsnitt inbäddade i PDF-filer kan inte användas.
+document_colors_disabled=PDF-dokument kan inte använda egna färger: \'Låt sidor använda egna färger\' är inaktiverat i webbläsaren.
