--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -106,6 +106,7 @@ missing_file_error=遺失PDF檔案。
 # 一些常見的類型有: "Check"、 "Text"、 "Comment"、 "Note"
 text_annotation_type=［{{type}} 註解］
 request_password=PDF檔案受密碼保護：
+invalid_password=密碼無效。
 
 printing_not_supported=警告：這個瀏覽器不完全支援列印。
 printing_not_ready=警告：PDF檔案未完全加載以進行打印。
