--- a/l10n/ja/viewer.properties
+++ b/l10n/ja/viewer.properties
@@ -116,8 +116,9 @@ missing_file_error=PDF ファイルが見つかりません。
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type=[{{type}} 注釈]
 request_password=PDF はパスワードによって保護されています
+invalid_password=無効なパスワードです
 
 printing_not_supported=警告：このブラウザでは印刷が完全にサポートされていません
 printing_not_ready=警告：PDF を印刷するための読み込みが終了していません
 web_fonts_disabled=Web フォントが無効になっています: 埋め込まれた PDF のフォントを使用することができません
-web_colors_disabled=Web カラーが無効になっています
+document_colors_disabled=PDF文書は、Web ページが指定した配色を使用することができません: \'Web ページが指定した配色\' はブラウザで無効になっています。
