--- a/l10n/ja/viewer.properties
+++ b/l10n/ja/viewer.properties
@@ -30,16 +30,30 @@ zoom_out_label=縮小
 zoom_in.title=拡大
 zoom_in_label=拡大
 zoom.title=ズーム
-print.title=印刷
-print_label=印刷
 presentation_mode.title=プレゼンテーションモードに切り替えます
 presentation_mode_label=プレゼンテーションモード
 open_file.title=ファイルを開く
 open_file_label=開く
+print.title=印刷
+print_label=印刷
 download.title=ダウンロード
 download_label=ダウンロード
 bookmark.title=現在のビューをブックマーク
 bookmark_label=現在のビューをブックマーク
+
+# Secondary toolbar and context menu
+first_page.title=最初のページへ移動
+first_page.label=最初のページへ移動
+first_page_label=最初のページへ移動
+last_page.title=最後のページへ移動
+last_page.label=最後のページへ移動
+last_page_label=最後のページへ移動
+page_rotate_cw.title=右回転
+page_rotate_cw.label=右回転
+page_rotate_cw_label=右回転
+page_rotate_ccw.title=左回転
+page_rotate_ccw.label=左回転
+page_rotate_ccw_label=左回転
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
@@ -60,12 +74,6 @@ thumb_page_title={{page}} ページ
 # LOCALIZATION NOTE (thumb_page_canvas): "{{page}}" will be replaced by the page
 # number.
 thumb_page_canvas=ページの縮小版 {{page}}
-
-# Context menu
-first_page.label=最初のページへ移動
-last_page.label=最後のページへ移動
-page_rotate_cw.label=右回転
-page_rotate_ccw.label=左回転
 
 # Find panel button title and messages
 find_label=検索:
