--- a/l10n/nl/viewer.properties
+++ b/l10n/nl/viewer.properties
@@ -30,16 +30,32 @@ zoom_out_label=Uitzoomen
 zoom_in.title=Inzoomen
 zoom_in_label=Inzoomen
 zoom.title=Zoomen
-print.title=Afdrukken
-print_label=Afdrukken
 presentation_mode.title=Omschakelen naar presentatiemodus
 presentation_mode_label=Presentatiemodus
 open_file.title=Bestand openen
-open_file_label=Openen
+open_file_label=Bestand openen
+print.title=Afdrukken
+print_label=Afdrukken
 download.title=Downloaden
 download_label=Downloaden
 bookmark.title=Huidige weergave (kopiëren of openen in nieuw venster)
 bookmark_label=Huidige weergave
+
+# Secondary toolbar and context menu
+tools.title=Hulpmiddelen
+tools_label=Hulpmiddelen
+first_page.title=Naar de eerste pagina gaan
+first_page.label=Naar de eerste pagina gaan
+first_page_label=Naar de eerste pagina gaan
+last_page.title=Naar de laatste pagina gaan
+last_page.label=Naar de laatste pagina gaan
+last_page_label=Naar de laatste pagina gaan
+page_rotate_cw.title=Met de klok mee roteren
+page_rotate_cw.label=Met de klok mee roteren
+page_rotate_cw_label=Met de klok mee roteren
+page_rotate_ccw.title=Tegen de klok in roteren
+page_rotate_ccw.label=Tegen de klok in roteren
+page_rotate_ccw_label=Tegen de klok in roteren
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
@@ -60,12 +76,6 @@ thumb_page_title=Pagina {{page}}
 # LOCALIZATION NOTE (thumb_page_canvas): "{{page}}" will be replaced by the page
 # number.
 thumb_page_canvas=Miniatuur van pagina {{page}}
-
-# Context menu
-first_page.label=Naar de eerste pagina gaan
-last_page.label=Naar de laatste pagina gaan
-page_rotate_cw.label=Met de klok mee roteren
-page_rotate_ccw.label=Tegen de klok in roteren
 
 # Find panel button title and messages
 find_label=Zoeken:
