--- a/l10n/sv/viewer.properties
+++ b/l10n/sv/viewer.properties
@@ -30,16 +30,30 @@ zoom_out_label=Zooma ut
 zoom_in.title=Zooma in
 zoom_in_label=Zooma in
 zoom.title=Zooma
-print.title=Skriv ut
-print_label=Skriv ut
 presentation_mode.title=Presentationsläge
 presentation_mode_label=Presentationsläge
 open_file.title=Öppna fil
 open_file_label=Öppna
+print.title=Skriv ut
+print_label=Skriv ut
 download.title=Ladda ner
 download_label=Ladda ner
 bookmark.title=Aktuell vy (kopiera eller öppna i nytt fönster)
 bookmark_label=Aktuell vy
+
+# Secondary toolbar and context menu
+first_page.title=Gå till första sidan
+first_page.label=Gå till första sidan
+first_page_label=Gå till första sidan
+last_page.title=Gå till sista sidan
+last_page.label=Gå till sista sidan
+last_page_label=Gå till sista sidan
+page_rotate_cw.title=Rotera medurs
+page_rotate_cw.label=Rotera medurs
+page_rotate_cw_label=Rotera medurs
+page_rotate_ccw.title=Rotera moturs
+page_rotate_ccw.label=Rotera moturs
+page_rotate_ccw_label=Rotera moturs
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
@@ -60,12 +74,6 @@ thumb_page_title=Sida {{page}}
 # LOCALIZATION NOTE (thumb_page_canvas): "{{page}}" will be replaced by the page
 # number.
 thumb_page_canvas=Miniatyr av sida {{page}}
-
-# Context menu
-first_page.label=Gå till första sidan
-last_page.label=Gå till sista sidan
-page_rotate_cw.label=Rotera medurs
-page_rotate_ccw.label=Rotera moturs
 
 # Find panel button title and messages
 find_label=Sök:
