--- a/l10n/zh-TW/viewer.properties
+++ b/l10n/zh-TW/viewer.properties
@@ -30,16 +30,30 @@ zoom_out_label=縮小
 zoom_in.title=放大
 zoom_in_label=放大
 zoom.title=縮放
-print.title=列印
-print_label=列印
 presentation_mode.title=切換至簡報模式
 presentation_mode_label=簡報模式
 open_file.title=開啟檔案
 open_file_label=開啟
+print.title=列印
+print_label=列印
 download.title=下載
 download_label=下載
 bookmark.title=目前檢視的內容（複製或開啟於新視窗）
 bookmark_label=目前檢視
+
+# Secondary toolbar and context menu
+first_page.title=跳到第一頁
+first_page.label=跳到第一頁
+first_page_label=跳到第一頁
+last_page.title=跳到最後一頁
+last_page.label=跳到最後一頁
+last_page_label=跳到最後一頁
+page_rotate_cw.title=順時針旋轉
+page_rotate_cw.label=順時針旋轉
+page_rotate_cw_label=順時針旋轉
+page_rotate_ccw.title=逆時針旋轉
+page_rotate_ccw.label=逆時針旋轉
+page_rotate_ccw_label=逆時針旋轉
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
@@ -60,12 +74,6 @@ thumb_page_title=頁 {{page}}
 # LOCALIZATION NOTE (thumb_page_canvas): "{{page}}" will be replaced by the page
 # number.
 thumb_page_canvas=頁 {{page}} 的縮圖
-
-# Context menu
-first_page.label=跳到第一頁
-last_page.label=跳到最後一頁
-page_rotate_cw.label=順時針旋轉
-page_rotate_ccw.label=逆時針旋轉
 
 # Find panel button title and messages
 find_label=尋找:
@@ -122,4 +130,3 @@ printing_not_supported=警告: 此瀏覽器未完整支援列印功能。
 printing_not_ready=警告: 此 PDF 未完成下載以供列印。
 web_fonts_disabled=已停用網路字型 (Web fonts): 無法使用 PDF 內嵌字型。
 document_colors_disabled=瀏覽器的「優先使用網頁指定的色彩」未被勾選，PDF 文件無法使用自己的色彩。
-
