Update the Swedish l10n with secondaryToolbar strings

--- a/l10n/sv/viewer.properties
+++ b/l10n/sv/viewer.properties
@@ -42,6 +42,8 @@ bookmark.title=Aktuell vy (kopiera eller öppna i nytt fönster)
 bookmark_label=Aktuell vy
 
 # Secondary toolbar and context menu
+tools.title=Verktyg
+tools_label=Verktyg
 first_page.title=Gå till första sidan
 first_page.label=Gå till första sidan
 first_page_label=Gå till första sidan
