--- a/l10n/sv-SE/viewer.properties
+++ b/l10n/sv-SE/viewer.properties
@@ -140,6 +140,9 @@ page_scale_width=Sidbredd
 page_scale_fit=Anpassa sida
 page_scale_auto=Automatisk zoom
 page_scale_actual=Verklig storlek
+# LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
+# numerical scale value.
+page_scale_percent={{scale}} %
 
 # Loading indicator messages
 loading_error_indicator=Fel
