--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -20,9 +20,13 @@ next_label=Next
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
 page.title=Page
-# LOCALIZATION NOTE (page_of): "{{pageCount}}" will be replaced by a number
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
-page_of=of {{pageCount}}
+of_pages=of {{pagesCount}}
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
++page_of_pages=({{pageNumber}} of {{pagesCount}})
 
 zoom_out.title=Zoom Out
 zoom_out_label=Zoom Out
