--- a/l10n/sv-SE/viewer.properties
+++ b/l10n/sv-SE/viewer.properties
@@ -20,9 +20,13 @@ next_label=Nästa
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
 page.title=Sida
-# LOCALIZATION NOTE (page_of): "{{pageCount}}" will be replaced by a number
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
-page_of=av {{pageCount}}
+of_pages=av {{pagesCount}}
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently active visible page,
+# respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} av {{pagesCount}})
 
 zoom_out.title=Zooma ut
 zoom_out_label=Zooma ut
