--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -18,11 +18,10 @@ previous_label=Previous
 next.title=Next Page
 next_label=Next
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Page:
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Page
+# LOCALIZATION NOTE (page_of): "{{pageCount}}" will be replaced by a number
+# representing the total number of pages in the document.
 page_of=of {{pageCount}}
 
 zoom_out.title=Zoom Out
