--- a/l10n/sv-SE/viewer.properties
+++ b/l10n/sv-SE/viewer.properties
@@ -18,11 +18,10 @@ previous_label=Föregående
 next.title=Nästa sida
 next_label=Nästa
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Sida:
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Sida
+# LOCALIZATION NOTE (page_of): "{{pageCount}}" will be replaced by a number
+# representing the total number of pages in the document.
 page_of=av {{pageCount}}
 
 zoom_out.title=Zooma ut
