--- a/l10n/fy-NL/viewer.properties
+++ b/l10n/fy-NL/viewer.properties
@@ -30,12 +30,12 @@ zoom_out_label=Utzoome
 zoom_in.title=Ynzoome
 zoom_in_label=Ynzoome
 zoom.title=Zoome
-print.title=Ofdrukke
-print_label=Ofdrukke
-presentation_mode.title=Wikselje nei presintaasjemoadus
-presentation_mode_label=Presintaasjemoadus
+presentation_mode.title=Wikselje nei presintaasjemodus
+presentation_mode_label=Presintaasjemodus
 open_file.title=Bestân iepenje
 open_file_label=Iepenje
+print.title=Ofdrukke
+print_label=Ofdrukke
 download.title=Downloade
 download_label=Downloade
 bookmark.title=Aktuele finster (kopiearje of iepenje yn nij finster)
@@ -45,17 +45,17 @@ bookmark_label=Aktuele finster
 tools.title=Ark
 tools_label=Ark
 first_page.title=Gean nei earste side
-first_page.label=Gean nei earste side
+first_page.label=Nei earste side gean
 first_page_label=Gean nei earste side
 last_page.title=Gean nei lêste side
-last_page.label=Gean nei lêste side
+last_page.label=Nei lêste side gean
 last_page_label=Gean nei lêste side
 page_rotate_cw.title=Rjochtsom draaie
 page_rotate_cw.label=Rjochtsom draaie
 page_rotate_cw_label=Rjochtsom draaie
-page_rotate_ccw.title=Linksom draaie
-page_rotate_ccw.label=Linksom draaie
-page_rotate_ccw_label=Linksom draaie
+page_rotate_ccw.title=Loftsom draaie
+page_rotate_ccw.label=Loftsom draaie
+page_rotate_ccw_label=Loftsom draaie
 
 hand_tool_enable.title=Hânark ynskeakelje
 hand_tool_enable_label=Hânark ynskeakelje
@@ -110,12 +110,6 @@ thumb_page_title=Side {{page}}
 # number.
 thumb_page_canvas=Foarbyld fan side {{page}}
 
-# Context menu
-first_page.label=Nei earste side gean
-last_page.label=Nei lêste side gean
-page_rotate_cw.label=Rjochtsom draaie
-page_rotate_ccw.label=Linksom draaie
-
 # Find panel button title and messages
 find_label=Sykje:
 find_previous.title=It foarige foarkommen fan de tekst sykje
@@ -124,8 +118,8 @@ find_next.title=It folgjende foarkommen fan de tekst sykje
 find_next_label=Folgjende
 find_highlight=Alles markearje
 find_match_case_label=Haadlettergefoelich
-find_reached_top=Boppekant fan dokumint berikt, trochgien fanôf ûnder
-find_reached_bottom=Ein fan dokumint berikt, trochgien fanôf boppe
+find_reached_top=Boppekant fan dokumint berikt, trochgien fan ûnder ôf
+find_reached_bottom=Ein fan dokumint berikt, trochgien fan boppe ôf
 find_not_found=Tekst net fûn
 
 # Error panel labels
@@ -151,7 +145,7 @@ rendering_error=Der is in flater bard by it renderjen fan de side.
 page_scale_width=Sidebreedte
 page_scale_fit=Hiele side
 page_scale_auto=Automatysk zoome
-page_scale_actual=Wurklike grutte
+page_scale_actual=Werklike grutte
 # LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
 # numerical scale value.
 page_scale_percent={{scale}}%
@@ -177,4 +171,3 @@ printing_not_supported=Warning: Printen is net folslein stipe troch dizze browse
 printing_not_ready=Warning: PDF is net folslein laden om ôf te drukken.
 web_fonts_disabled=Weblettertypen binne útskeakele: gebrûk fan ynsluten PDF-lettertypen is net mooglik.
 document_colors_not_allowed=PDF-dokuminten meie harren eigen kleuren net brûike: ‘Siden tastean om harren eigen kleuren te kiezen’ is útskeakele yn de browser.
-
