--- a/l10n/en-US/viewer.properties
+++ b/l10n/en-US/viewer.properties
@@ -26,7 +26,7 @@ of_pages=of {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
-+page_of_pages=({{pageNumber}} of {{pagesCount}})
+page_of_pages=({{pageNumber}} of {{pagesCount}})
 
 zoom_out.title=Zoom Out
 zoom_out_label=Zoom Out
