--- a/l10n/ja/viewer.properties
+++ b/l10n/ja/viewer.properties
@@ -161,7 +161,7 @@ password_invalid=無効なパスワードです。もう一度やり直してく
 password_ok=OK
 password_cancel=キャンセル
 
-printing_not_supported=警告: このブラウザでは印刷が完全にサポートされていません
+printing_not_supported=警告: このブラウザーでは印刷が完全にサポートされていません
 printing_not_ready=警告: PDF を印刷するための読み込みが終了していません
-web_fonts_disabled=Web フォントが無効になっています: 埋め込まれた PDF のフォントを使用できません
-document_colors_not_allowed=PDF 文書は、Web ページが指定した配色を使用することができません: 'Web ページが指定した配色' はブラウザで無効になっています。
+web_fonts_disabled=ウェブフォントが無効になっています: 埋め込まれた PDF のフォントを使用できません
+document_colors_not_allowed=PDF 文書は、ウェブページが指定した配色を使用することができません: 'ウェブページが指定した配色' はブラウザーで無効になっています。
