--- a/l10n/ach/viewer.properties
+++ b/l10n/ach/viewer.properties
@@ -18,12 +18,12 @@ previous_label=Mukato
 next.title=Pot buk malubo
 next_label=Malubo
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Pot buk:
-page_of=pi {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
 
 zoom_out.title=Jwik Matidi
 zoom_out_label=Jwik Matidi
@@ -88,13 +88,15 @@ document_properties_version=Kit PDF:
 document_properties_page_count=Kwan me pot buk:
 document_properties_close=Lor
 
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Lok gintic ma inget
 toggle_sidebar_label=Lok gintic ma inget
-outline.title=Nyut rek pa gin acoya
-outline_label=Pek pa gin acoya
+document_outline_label=Pek pa gin acoya
 attachments.title=Nyut twec
 attachments_label=Twec
 thumbs.title=Nyut cal
@@ -165,7 +167,6 @@ text_annotation_type.alt=[{{type}} Lok angea manok]
 password_label=Ket mung me donyo me yabo pwail me PDF man.
 password_invalid=Mung me donyo pe atir. Tim ber i tem doki.
 password_ok=OK
-password_cancel=Juk
 
 printing_not_supported=Ciko: Layeny ma pe teno goyo liweng.
 printing_not_ready=Ciko: PDF pe ocane weng me agoya.
