--- a/l10n/sv-SE/viewer.properties
+++ b/l10n/sv-SE/viewer.properties
@@ -24,7 +24,7 @@ page.title=Sida
 # representing the total number of pages in the document.
 of_pages=av {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
-# will be replaced by a number representing the currently active visible page,
+# will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
 page_of_pages=({{pageNumber}} av {{pagesCount}})
 
