--- a/l10n/te/viewer.properties
+++ b/l10n/te/viewer.properties
@@ -18,12 +18,15 @@ previous_label=క్రితం
 next.title=తరువాత పేజీ
 next_label=తరువాత
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=పేజీ:
-page_of=మొత్తం {{pageCount}} లో
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=పేజీ
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+of_pages=మొత్తం {{pageCount}} లో
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
+page_of_pages=(మొత్తం {{pagesCount}} లో {{pageNumber}}వది)
 
 zoom_out.title=జూమ్ తగ్గించు
 zoom_out_label=జూమ్ తగ్గించు
@@ -88,13 +91,16 @@ document_properties_version=PDF వర్షన్:
 document_properties_page_count=పేజీల సంఖ్య:
 document_properties_close=మూసివేయి
 
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=రద్దుచేయి
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=పక్కపట్టీ మార్చు
 toggle_sidebar_label=పక్కపట్టీ మార్చు
-outline.title=పత్రము అవుట్‌లైన్ చూపు
-outline_label=పత్రము అవుట్‌లైన్
 attachments.title=అనుబంధాలు చూపు
 attachments_label=అనుబంధాలు
 thumbs.title=థంబ్‌నైల్స్ చూపు
