--- a/l10n/th/viewer.properties
+++ b/l10n/th/viewer.properties
@@ -18,12 +18,15 @@ previous_label=ก่อนหน้า
 next.title=หน้าถัดไป
 next_label=ถัดไป
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=หน้า:
-page_of=จาก {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=หน้า
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+of_pages=จาก {{pagesCount}}
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} จาก {{pagesCount}})
 
 zoom_out.title=ซูมออก
 zoom_out_label=ซูมออก
@@ -88,13 +91,17 @@ document_properties_version=รุ่น PDF:
 document_properties_page_count=จำนวนหน้า:
 document_properties_close=ปิด
 
+print_progress_message=กำลังเตรียมเอกสารสำหรับการพิมพ์…
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=ยกเลิก
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
-toggle_sidebar.title=สลับแถบข้าง
-toggle_sidebar_label=สลับแถบข้าง
-outline.title=แสดงโครงเอกสาร
-outline_label=โครงเอกสาร
+toggle_sidebar.title=เปิด/ปิดแถบข้าง
+toggle_sidebar_label=เปิด/ปิดแถบข้าง
 attachments.title=แสดงสิ่งที่แนบมา
 attachments_label=สิ่งที่แนบมา
 thumbs.title=แสดงภาพขนาดย่อ
@@ -112,9 +119,9 @@ thumb_page_canvas=ภาพขนาดย่อของหน้า {{page}}
 
 # Find panel button title and messages
 find_label=ค้นหา:
-find_previous.title=หาตำแหน่งก่อนหน้าของคำค้น
+find_previous.title=หาตำแหน่งก่อนหน้าของวลี
 find_previous_label=ก่อนหน้า
-find_next.title=หาตำแหน่งถัดไปของคำค้น
+find_next.title=หาตำแหน่งถัดไปของวลี
 find_next_label=ถัดไป
 find_highlight=เน้นสีทั้งหมด
 find_match_case_label=ตัวพิมพ์ใหญ่เล็กตรงกัน
