--- a/l10n/an/viewer.properties
+++ b/l10n/an/viewer.properties
@@ -18,12 +18,12 @@ previous_label=Anterior
 next.title=Pachina siguient
 next_label=Siguient
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Pachina:
-page_of=de {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
 
 zoom_out.title=Achiquir
 zoom_out_label=Achiquir
@@ -88,13 +88,15 @@ document_properties_version=Versión de PDF:
 document_properties_page_count=Numero de pachinas:
 document_properties_close=Zarrar
 
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Amostrar u amagar a barra lateral
 toggle_sidebar_label=Amostrar a barra lateral
-outline.title=Amostrar o esquema d'o documento
-outline_label=Esquema d'o documento
+document_outline_label=Esquema d'o documento
 attachments.title=Amostrar os adchuntos
 attachments_label=Adchuntos
 thumbs.title=Amostrar as miniaturas
@@ -165,7 +167,6 @@ text_annotation_type.alt=[Anotación {{type}}]
 password_label=Introduzca a clau ta ubrir iste fichero PDF.
 password_invalid=Clau invalida. Torna a intentar-lo.
 password_ok=Acceptar
-password_cancel=Cancelar
 
 printing_not_supported=Pare cuenta: Iste navegador no maneya totalment as impresions.
 printing_not_ready=Aviso: Encara no se ha cargau completament o PDF ta imprentar-lo.
