--- a/l10n/pt-BR/viewer.properties
+++ b/l10n/pt-BR/viewer.properties
@@ -18,17 +18,20 @@ previous_label=Anterior
 next.title=Próxima página
 next_label=Próxima
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Página:
-page_of=de {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Página
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+of_pages=de {{pagesCount}}
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} de {{pagesCount}})
 
-zoom_out.title=Diminuir zoom
-zoom_out_label=Diminuir zoom
-zoom_in.title=Aumentar zoom
-zoom_in_label=Aumentar zoom
+zoom_out.title=Reduzir
+zoom_out_label=Reduzir
+zoom_in.title=Ampliar
+zoom_in_label=Ampliar
 zoom.title=Zoom
 presentation_mode.title=Alternar para modo de apresentação
 presentation_mode_label=Modo de apresentação
@@ -57,8 +60,8 @@ page_rotate_ccw.title=Girar no sentido anti-horário
 page_rotate_ccw.label=Girar no sentido anti-horário
 page_rotate_ccw_label=Girar no sentido anti-horário
 
-hand_tool_enable.title=Ativar ferramenta da mão
-hand_tool_enable_label=Ativar ferramenta da mão
+hand_tool_enable.title=Habilitar ferramenta de mão
+hand_tool_enable_label=Habilitar ferramenta de mão
 hand_tool_disable.title=Desativar ferramenta da mão
 hand_tool_disable_label=Desativar ferramenta da mão
 
@@ -88,13 +91,16 @@ document_properties_version=Versão do PDF:
 document_properties_page_count=Número de páginas:
 document_properties_close=Fechar
 
+print_progress_message=Preparando documento para impressão…
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+print_progress_close=Cancelar
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Exibir/ocultar painel
 toggle_sidebar_label=Exibir/ocultar painel
-outline.title=Exibir estrutura de tópicos
-outline_label=Estrutura de tópicos do documento
 attachments.title=Mostrar anexos
 attachments_label=Anexos
 thumbs.title=Mostrar miniaturas
