--- a/l10n/pt-PT/viewer.properties
+++ b/l10n/pt-PT/viewer.properties
@@ -18,12 +18,15 @@ previous_label=Anterior
 next.title=Página seguinte
 next_label=Seguinte
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Página:
-page_of=de {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Página
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+of_pages=de {{pagesCount}}
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} de {{pagesCount}})
 
 zoom_out.title=Reduzir
 zoom_out_label=Reduzir
@@ -88,13 +91,18 @@ document_properties_version=Versão do PDF:
 document_properties_page_count=N.º de páginas:
 document_properties_close=Fechar
 
+print_progress_message=A preparar o documento para impressão…
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Cancelar
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Comutar barra lateral
 toggle_sidebar_label=Comutar barra lateral
-outline.title=Mostrar estrutura do documento
-outline_label=Estrutura do documento
+document_outline_label=Estrutura do documento
 attachments.title=Mostrar anexos
 attachments_label=Anexos
 thumbs.title=Mostrar miniaturas
