--- a/l10n/ro/viewer.properties
+++ b/l10n/ro/viewer.properties
@@ -18,12 +18,12 @@ previous_label=Înapoi
 next.title=Pagina următoare
 next_label=Înainte
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Pagină:
-page_of=din {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
 
 zoom_out.title=Micșorează
 zoom_out_label=Micșorează
@@ -88,13 +88,15 @@ document_properties_version=Versiune PDF:
 document_properties_page_count=Număr de pagini:
 document_properties_close=Închide
 
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Comută bara laterală
 toggle_sidebar_label=Comută bara laterală
-outline.title=Arată schița documentului
-outline_label=Schiță document
+document_outline_label=Schiță document
 attachments.title=Afișează atașamentele
 attachments_label=Atașamente
 thumbs.title=Arată miniaturi
@@ -165,7 +167,6 @@ text_annotation_type.alt=[{{type}} Adnotare]
 password_label=Introduceți parola pentru a deschide acest fișier PDF.
 password_invalid=Parolă greșită. Vă rugăm să încercați din nou.
 password_ok=Ok
-password_cancel=Renunță
 
 printing_not_supported=Avertisment: Tipărirea nu este suportată în totalitate de acest browser.
 printing_not_ready=Avertisment: Fișierul PDF nu este încărcat complet pentru tipărire.
