--- a/l10n/sr/viewer.properties
+++ b/l10n/sr/viewer.properties
@@ -18,12 +18,12 @@ previous_label=Претходна
 next.title=Следећа страница
 next_label=Следећа
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Страница:
-page_of=од {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
 
 zoom_out.title=Умањи
 zoom_out_label=Умањи
@@ -88,13 +88,14 @@ document_properties_version=PDF верзија:
 document_properties_page_count=Број страница:
 document_properties_close=Затвори
 
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Прикажи додатну палету
 toggle_sidebar_label=Прикажи додатну палету
-outline.title=Прикажи контуру документа
-outline_label=Контура документа
 attachments.title=Прикажи прилоге
 attachments_label=Прилози
 thumbs.title=Прикажи сличице
