--- a/l10n/tr/viewer.properties
+++ b/l10n/tr/viewer.properties
@@ -18,12 +18,15 @@ previous_label=Önceki
 next.title=Sonraki sayfa
 next_label=Sonraki
 
-# LOCALIZATION NOTE (page_label, page_of):
-# These strings are concatenated to form the "Page: X of Y" string.
-# Do not translate "{{pageCount}}", it will be substituted with a number
-# representing the total number of pages.
-page_label=Sayfa:
-page_of=/ {{pageCount}}
+# LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Sayfa
+# LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
+# representing the total number of pages in the document.
+of_pages=/ {{pagesCount}}
+# LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
+# will be replaced by a number representing the currently visible page,
+# respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} / {{pagesCount}})
 
 zoom_out.title=Uzaklaș
 zoom_out_label=Uzaklaș
@@ -88,13 +91,18 @@ document_properties_version=PDF sürümü:
 document_properties_page_count=Sayfa sayısı:
 document_properties_close=Kapat
 
+print_progress_message=Belge yazdırılmaya hazırlanıyor…
+# LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
+# a numerical per cent value.
+print_progress_percent=%{{progress}}
+print_progress_close=İptal
+
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Kenar çubuğunu aç/kapat
 toggle_sidebar_label=Kenar çubuğunu aç/kapat
-outline.title=Belge şemasını göster
-outline_label=Belge şeması
+document_outline_label=Belge şeması
 attachments.title=Ekleri göster
 attachments_label=Ekler
 thumbs.title=Küçük resimleri göster
