--- a/l10n/ar/viewer.properties
+++ b/l10n/ar/viewer.properties
@@ -19,11 +19,14 @@ next.title=الصفحة التالية
 next_label=التالية
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=صفحة
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=من {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} من {{pagesCount}})
 
 zoom_out.title=بعّد
 zoom_out_label=بعّد
@@ -88,14 +91,18 @@ document_properties_version=إصدارة PDF:
 document_properties_page_count=عدد الصفحات:
 document_properties_close=أغلق
 
+print_progress_message=يُحضّر المستند للطباعة…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}٪
+print_progress_close=ألغِ
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=بدّل الشريط الجانبي
 toggle_sidebar_label=بدّل الشريط الجانبي
+document_outline.title=اعرض فهرس المستند (نقر مزدوج لتمديد أو تقليص كل العناصر)
 document_outline_label=مخطط المستند
 attachments.title=اعرض المرفقات
 attachments_label=المُرفقات
@@ -167,6 +174,7 @@ text_annotation_type.alt=[تعليق {{type}}]
 password_label=أدخل لكلمة السر لفتح هذا الملف.
 password_invalid=كلمة سر خطأ. من فضلك أعد المحاولة.
 password_ok=حسنا
+password_cancel=ألغِ
 
 printing_not_supported=تحذير: لا يدعم هذا المتصفح الطباعة بشكل كامل.
 printing_not_ready=تحذير: ملف PDF لم يُحمّل كاملًا للطباعة.
