--- a/l10n/eu/viewer.properties
+++ b/l10n/eu/viewer.properties
@@ -19,11 +19,14 @@ next.title=Hurrengo orria
 next_label=Hurrengoa
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Orria
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=/ {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages={{pagesCount}})/({{pageNumber}}
 
 zoom_out.title=Urrundu zooma
 zoom_out_label=Urrundu zooma
@@ -88,8 +91,11 @@ document_properties_version=PDF bertsioa:
 document_properties_page_count=Orrialde kopurua:
 document_properties_close=Itxi
 
+print_progress_message=Dokumentua inprimatzeko prestatzen…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent=%{{progress}}
+print_progress_close=Utzi
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
@@ -167,6 +173,7 @@ text_annotation_type.alt=[{{type}} ohartarazpena]
 password_label=Idatzi PDF fitxategi hau irekitzeko pasahitza.
 password_invalid=Pasahitz baliogabea. Saiatu berriro mesedez.
 password_ok=Ados
+password_cancel=Utzi
 
 printing_not_supported=Abisua: inprimatzeko euskarria ez da erabatekoa nabigatzaile honetan.
 printing_not_ready=Abisua: PDFa ez dago erabat kargatuta inprimatzeko.
