--- a/l10n/th/viewer.properties
+++ b/l10n/th/viewer.properties
@@ -33,8 +33,8 @@ zoom_out_label=ซูมออก
 zoom_in.title=ซูมเข้า
 zoom_in_label=ซูมเข้า
 zoom.title=ซูม
-presentation_mode.title=สลับเข้าสู่รูปแบบการนำเสนอ
-presentation_mode_label=รูปแบบการนำเสนอ
+presentation_mode.title=สลับเป็นโหมดการนำเสนอ
+presentation_mode_label=โหมดการนำเสนอ
 open_file.title=เปิดไฟล์
 open_file_label=เปิด
 print.title=พิมพ์
@@ -102,8 +102,10 @@ print_progress_close=ยกเลิก
 # tooltips)
 toggle_sidebar.title=เปิด/ปิดแถบข้าง
 toggle_sidebar_label=เปิด/ปิดแถบข้าง
-attachments.title=แสดงสิ่งที่แนบมา
-attachments_label=สิ่งที่แนบมา
+document_outline.title=แสดงเค้าร่างเอกสาร (คลิกสองครั้งเพื่อขยาย/ยุบรายการทั้งหมด)
+document_outline_label=เค้าร่างเอกสาร
+attachments.title=แสดงไฟล์แนบ
+attachments_label=ไฟล์แนบ
 thumbs.title=แสดงภาพขนาดย่อ
 thumbs_label=ภาพขนาดย่อ
 findbar.title=ค้นหาในเอกสาร
@@ -127,11 +129,11 @@ find_highlight=เน้นสีทั้งหมด
 find_match_case_label=ตัวพิมพ์ใหญ่เล็กตรงกัน
 find_reached_top=ค้นหาถึงจุดเริ่มต้นของหน้า เริ่มค้นต่อจากด้านล่าง
 find_reached_bottom=ค้นหาถึงจุดสิ้นสุดหน้า เริ่มค้นต่อจากด้านบน
-find_not_found=ไม่พบวลีที่ต้องการ
+find_not_found=ไม่พบวลี
 
 # Error panel labels
 error_more_info=ข้อมูลเพิ่มเติม
-error_less_info=ข้อมูลน้อย
+error_less_info=ข้อมูลน้อยลง
 error_close=ปิด
 # LOCALIZATION NOTE (error_version_info): "{{version}}" and "{{build}}" will be
 # replaced by the PDF.JS version and build ID.
@@ -146,13 +148,13 @@ error_stack=สแต็ก: {{stack}}
 error_file=ไฟล์: {{file}}
 # LOCALIZATION NOTE (error_line): "{{line}}" will be replaced with a line number
 error_line=บรรทัด: {{line}}
-rendering_error=เกิดข้อผิดพลาดขณะกำลังคำนวณการแสดงผลของหน้า
+rendering_error=เกิดข้อผิดพลาดขณะกำลังเรนเดอร์หน้า
 
 # Predefined zoom values
 page_scale_width=ความกว้างหน้า
 page_scale_fit=พอดีหน้า
 page_scale_auto=ซูมอัตโนมัติ
-page_scale_actual=ขนาดเท่าจริง
+page_scale_actual=ขนาดจริง
 # LOCALIZATION NOTE (page_scale_percent): "{{scale}}" will be replaced by a
 # numerical scale value.
 page_scale_percent={{scale}}%
@@ -162,14 +164,14 @@ loading_error_indicator=ข้อผิดพลาด
 loading_error=เกิดข้อผิดพลาดขณะกำลังโหลด PDF
 invalid_file_error=ไฟล์ PDF ไม่ถูกต้องหรือเสียหาย
 missing_file_error=ไฟล์ PDF ขาดหาย
-unexpected_response_error=การตอบสนองเซิร์ฟเวอร์ที่ไม่คาดหวัง
+unexpected_response_error=การตอบสนองของเซิร์ฟเวอร์ที่ไม่คาดคิด
 
 # LOCALIZATION NOTE (text_annotation_type.alt): This is used as a tooltip.
 # "{{type}}" will be replaced with an annotation type from a list defined in
 # the PDF spec (32000-1:2008 Table 169 – Annotation types).
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type.alt=[คำอธิบายประกอบ {{type}}]
-password_label=กรอกรหัสผ่านเพื่อเปิดไฟล์ PDF นี้
+password_label=ป้อนรหัสผ่านเพื่อเปิดไฟล์ PDF นี้
 password_invalid=รหัสผ่านไม่ถูกต้อง โปรดลองอีกครั้ง
 password_ok=ตกลง
 password_cancel=ยกเลิก
