--- a/l10n/an/viewer.properties
+++ b/l10n/an/viewer.properties
@@ -19,11 +19,14 @@ next.title=Pachina siguient
 next_label=Siguient
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Pachina
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=de {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} de {{pagesCount}})
 
 zoom_out.title=Achiquir
 zoom_out_label=Achiquir
@@ -88,14 +91,18 @@ document_properties_version=Versión de PDF:
 document_properties_page_count=Numero de pachinas:
 document_properties_close=Zarrar
 
+print_progress_message=Se ye preparando la documentación pa imprentar…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Cancelar
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Amostrar u amagar a barra lateral
 toggle_sidebar_label=Amostrar a barra lateral
+document_outline.title=Amostrar esquema d'o documento (fer doble clic pa expandir/compactar totz los items)
 document_outline_label=Esquema d'o documento
 attachments.title=Amostrar os adchuntos
 attachments_label=Adchuntos
@@ -167,6 +174,7 @@ text_annotation_type.alt=[Anotación {{type}}]
 password_label=Introduzca a clau ta ubrir iste fichero PDF.
 password_invalid=Clau invalida. Torna a intentar-lo.
 password_ok=Acceptar
+password_cancel=Cancelar
 
 printing_not_supported=Pare cuenta: Iste navegador no maneya totalment as impresions.
 printing_not_ready=Aviso: Encara no se ha cargau completament o PDF ta imprentar-lo.
