--- a/l10n/ast/viewer.properties
+++ b/l10n/ast/viewer.properties
@@ -19,11 +19,14 @@ next.title=Páxina siguiente
 next_label=Siguiente
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Páxina
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=de {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} de {{pagesCount}})
 
 zoom_out.title=Reducir
 zoom_out_label=Reducir
@@ -88,8 +91,11 @@ document_properties_version=Versión PDF:
 document_properties_page_count=Númberu de páxines:
 document_properties_close=Zarrar
 
+print_progress_message=Tresnando documentu pa imprentar…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Encaboxar
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
