--- a/l10n/cs/viewer.properties
+++ b/l10n/cs/viewer.properties
@@ -19,11 +19,14 @@ next.title=Přejde na následující stránku
 next_label=Další
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Stránka
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=z {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} z {{pagesCount}})
 
 zoom_out.title=Zmenší velikost
 zoom_out_label=Zmenšit
@@ -88,14 +91,19 @@ document_properties_version=Verze PDF:
 document_properties_page_count=Počet stránek:
 document_properties_close=Zavřít
 
+print_progress_message=Příprava dokumentu pro tisk…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}} %
+print_progress_close=Zrušit
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Postranní lišta
 toggle_sidebar_label=Postranní lišta
+document_outline.title=Zobrazit osnovu dokumentu (dvojité klepnutí rozbalí/sbalí všechny položky)
+document_outline_label=Osnova dokumentu
 attachments.title=Zobrazí přílohy
 attachments_label=Přílohy
 thumbs.title=Zobrazí náhledy
