--- a/l10n/fa/viewer.properties
+++ b/l10n/fa/viewer.properties
@@ -19,12 +19,14 @@ next.title=صفحهٔ بعدی
 next_label=بعدی
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=صفحه
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
 of_pages=از {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}}از {{pagesCount}})
 
 zoom_out.title=کوچک‌نمایی
 zoom_out_label=کوچک‌نمایی
@@ -89,14 +91,18 @@ document_properties_version=نسخه PDF:
 document_properties_page_count=تعداد صفحات:
 document_properties_close=بستن
 
+print_progress_message=آماده سازی مدارک برای چاپ کردن…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=لغو
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=باز و بسته کردن نوار کناری
 toggle_sidebar_label=تغییرحالت نوارکناری
+document_outline.title=نمایش رئوس مطالب مدارک(برای بازشدن/جمع شدن همه موارد دوبار کلیک کنید)
 document_outline_label=طرح نوشتار
 attachments.title=نمایش پیوست‌ها
 attachments_label=پیوست‌ها
@@ -168,6 +174,7 @@ text_annotation_type.alt=[{{type}} Annotation]
 password_label=جهت باز کردن پرونده PDF گذرواژه را وارد نمائید.
 password_invalid=گذرواژه نامعتبر. لطفا مجددا تلاش کنید.
 password_ok=تأیید
+password_cancel=لغو
 
 printing_not_supported=هشدار: قابلیت چاپ به‌طور کامل در این مرورگر پشتیبانی نمی‌شود.
 printing_not_ready=اخطار: پرونده PDF بطور کامل بارگیری نشده و امکان چاپ وجود ندارد.
