--- a/l10n/ms/viewer.properties
+++ b/l10n/ms/viewer.properties
@@ -19,11 +19,14 @@ next.title=Halaman Seterusnya
 next_label=Berikut
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Halaman
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=daripada {{pageCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} daripada {{pagesCount}})
 
 zoom_out.title=Zum Keluar
 zoom_out_label=Zum Keluar
@@ -88,14 +91,19 @@ document_properties_version=Versi PDF:
 document_properties_page_count=Kiraan Laman:
 document_properties_close=Tutup
 
+print_progress_message=Menyediakan dokumen untuk dicetak…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Batal
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Togol Bar Sisi
 toggle_sidebar_label=Togol Bar Sisi
+document_outline.title=Papar Rangka Dokumen (klik-dua-kali untuk kembangkan/kolaps semua item)
+document_outline_label=Rangka Dokumen
 attachments.title=Papar Lampiran
 attachments_label=Lampiran
 thumbs.title=Papar Thumbnails
