--- a/l10n/pt-PT/viewer.properties
+++ b/l10n/pt-PT/viewer.properties
@@ -102,6 +102,7 @@ print_progress_close=Cancelar
 # tooltips)
 toggle_sidebar.title=Comutar barra lateral
 toggle_sidebar_label=Comutar barra lateral
+document_outline.title=Mostrar limite do documento (duplo clique para expandir/colapsar todos os itens)
 document_outline_label=Estrutura do documento
 attachments.title=Mostrar anexos
 attachments_label=Anexos
