--- a/l10n/sr/viewer.properties
+++ b/l10n/sr/viewer.properties
@@ -19,11 +19,14 @@ next.title=Следећа страница
 next_label=Следећа
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Страница
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=од {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} од {{pagesCount}})
 
 zoom_out.title=Умањи
 zoom_out_label=Умањи
@@ -88,14 +91,19 @@ document_properties_version=PDF верзија:
 document_properties_page_count=Број страница:
 document_properties_close=Затвори
 
+print_progress_message=Припремам документ за штампање…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Откажи
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Прикажи додатну палету
 toggle_sidebar_label=Прикажи додатну палету
+document_outline.title=Прикажи контуру документа (дупли клик за проширење/скупљање елемената)
+document_outline_label=Контура документа
 attachments.title=Прикажи прилоге
 attachments_label=Прилози
 thumbs.title=Прикажи сличице
