--- a/l10n/sv-SE/viewer.properties
+++ b/l10n/sv-SE/viewer.properties
@@ -91,7 +91,7 @@ document_properties_version=PDF-version:
 document_properties_page_count=Sidantal:
 document_properties_close=Stäng
 
-print_progress_message=Förbereder dokumentet för utskrift…
+print_progress_message=Förbereder sidor för utskrift…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
 print_progress_percent={{progress}}%
@@ -102,7 +102,7 @@ print_progress_close=Avbryt
 # tooltips)
 toggle_sidebar.title=Visa/dölj sidofält
 toggle_sidebar_label=Visa/dölj sidofält
-document_outline.title=Visa dokumentöversikt (dubbelklicka för att expandera/komprimera alla element)
+document_outline.title=Visa dokumentdispositionen (dubbelklicka för att expandera/komprimera alla objekt)
 document_outline_label=Dokumentöversikt
 attachments.title=Visa Bilagor
 attachments_label=Bilagor
@@ -179,4 +179,4 @@ password_cancel=Avbryt
 printing_not_supported=Varning: Utskrifter stöds inte helt av den här webbläsaren.
 printing_not_ready=Varning: PDF:en är inte klar för utskrift.
 web_fonts_disabled=Webbtypsnitt är inaktiverade: kan inte använda inbäddade PDF-typsnitt.
-document_colors_not_allowed=PDF-dokument tillåts inte använda egna färger: "Låt sidor använda egna färger" är inaktiverat i webbläsaren.
+document_colors_not_allowed=PDF-dokument tillåts inte använda egna färger: “Låt sidor använda egna färger” är inaktiverat i webbläsaren.
