--- a/l10n/br/viewer.properties
+++ b/l10n/br/viewer.properties
@@ -19,11 +19,14 @@ next.title=Pajenn war-lerc'h
 next_label=War-lerc'h
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Pajenn
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=eus {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} war {{pagesCount}})
 
 zoom_out.title=Zoum bihanaat
 zoom_out_label=Zoum bihanaat
@@ -88,14 +91,18 @@ document_properties_version=Handelv PDF :
 document_properties_page_count=Niver a bajennoù :
 document_properties_close=Serriñ
 
+print_progress_message=O prientiñ an teul evit moullañ...
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Nullañ
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Diskouez/kuzhat ar varrenn gostez
 toggle_sidebar_label=Diskouez/kuzhat ar varrenn gostez
+document_outline.title=Diskouez steuñv an teul (daouglikit evit brasaat/bihanaat an holl elfennoù)
 document_outline_label=Sinedoù an teuliad
 attachments.title=Diskouez ar c'henstagadurioù
 attachments_label=Kenstagadurioù
@@ -167,6 +174,7 @@ text_annotation_type.alt=[{{type}} Notennañ]
 password_label=Enankit ar ger-tremen evit digeriñ ar restr PDF-mañ.
 password_invalid=Ger-tremen didalvoudek. Klaskit en-dro mar plij.
 password_ok=Mat eo
+password_cancel=Nullañ
 
 printing_not_supported=Kemenn : N'eo ket skoret penn-da-benn ar moullañ gant ar merdeer-mañ.
 printing_not_ready=Kemenn : N'hall ket bezañ moullet ar restr PDF rak n'eo ket karget penn-da-benn.
