--- a/l10n/cy/viewer.properties
+++ b/l10n/cy/viewer.properties
@@ -19,11 +19,14 @@ next.title=Tudalen Nesaf
 next_label=Nesaf
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=Tudalen
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
+of_pages=o {{pagesCount}}
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} o {{pagesCount}})
 
 zoom_out.title=Chwyddo Allan
 zoom_out_label=Chwyddo Allan
@@ -88,14 +91,18 @@ document_properties_version=Fersiwn PDF:
 document_properties_page_count=Cyfrif Tudalen:
 document_properties_close=Cau
 
+print_progress_message=Paratoi dogfen ar gyfer ei hargraffu…
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent={{progress}}%
+print_progress_close=Diddymu
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=Toglo'r Bar Ochr
 toggle_sidebar_label=Toglo'r Bar Ochr
+document_outline.title=Dangos Amlinell Dogfen (clic dwbl i ymestyn/cau pob eitem)
 document_outline_label=Amlinelliad Dogfen
 attachments.title=Dangos Atodiadau
 attachments_label=Atodiadau
@@ -167,6 +174,7 @@ text_annotation_type.alt=[Anodiad {{type}} ]
 password_label=Rhowch gyfrinair i agor y PDF.
 password_invalid=Cyfrinair annilys. Ceisiwch eto.
 password_ok=Iawn
+password_cancel=Diddymu
 
 printing_not_supported=Rhybudd: Nid yw argraffu yn cael ei gynnal yn llawn gan y porwr.
 printing_not_ready=Rhybudd: Nid yw'r PDF wedi ei lwytho'n llawn ar gyfer argraffu.
