--- a/l10n/pt-BR/viewer.properties
+++ b/l10n/pt-BR/viewer.properties
@@ -33,7 +33,7 @@ zoom_out_label=Reduzir
 zoom_in.title=Ampliar
 zoom_in_label=Ampliar
 zoom.title=Zoom
-presentation_mode.title=Alternar para modo de apresentação
+presentation_mode.title=Alternar para o modo de apresentação
 presentation_mode_label=Modo de apresentação
 open_file.title=Abrir arquivo
 open_file_label=Abrir
@@ -41,7 +41,7 @@ print.title=Imprimir
 print_label=Imprimir
 download.title=Download
 download_label=Download
-bookmark.title=Visualização atual (copie ou abra em uma nova janela)
+bookmark.title=Visualização atual (copiar ou abrir em uma nova janela)
 bookmark_label=Visualização atual
 
 # Secondary toolbar and context menu
@@ -62,8 +62,8 @@ page_rotate_ccw_label=Girar no sentido anti-horário
 
 hand_tool_enable.title=Habilitar ferramenta de mão
 hand_tool_enable_label=Habilitar ferramenta de mão
-hand_tool_disable.title=Desativar ferramenta da mão
-hand_tool_disable_label=Desativar ferramenta da mão
+hand_tool_disable.title=Desabilitar ferramenta de mão
+hand_tool_disable_label=Desabilitar ferramenta de mão
 
 # Document properties dialog box
 document_properties.title=Propriedades do documento…
@@ -100,10 +100,10 @@ print_progress_close=Cancelar
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
-toggle_sidebar.title=Exibir/ocultar painel
-toggle_sidebar_label=Exibir/ocultar painel
-document_outline.title=Mostrar sumário do documento (duplo-clique para expandir /collapse todos os ítens)
-document_outline_label=Sumário do documento
+toggle_sidebar.title=Alternar painel
+toggle_sidebar_label=Alternar painel
+document_outline.title=Mostrar a estrutura do documento (duplo-clique para expandir/recolher todos os ítens)
+document_outline_label=Estrutura do documento
 attachments.title=Mostrar anexos
 attachments_label=Anexos
 thumbs.title=Mostrar miniaturas
@@ -121,15 +121,15 @@ thumb_page_canvas=Miniatura da página {{page}}
 
 # Find panel button title and messages
 find_label=Localizar:
-find_previous.title=Localizar a ocorrência anterior do texto
+find_previous.title=Localizar a ocorrência anterior da frase
 find_previous_label=Anterior
-find_next.title=Localizar a próxima ocorrência do texto
+find_next.title=Localizar a próxima ocorrência da frase
 find_next_label=Próxima
 find_highlight=Realçar tudo
 find_match_case_label=Diferenciar maiúsculas/minúsculas
-find_reached_top=Atingido o início do documento, continuando do fim
-find_reached_bottom=Atingido o fim do documento, continuando do início
-find_not_found=Texto não encontrado
+find_reached_top=Início do documento alcançado, continuando do fim
+find_reached_bottom=Fim do documento alcançado, continuando do início
+find_not_found=Frase não encontrada
 
 # Error panel labels
 error_more_info=Mais informações
@@ -137,13 +137,13 @@ error_less_info=Menos informações
 error_close=Fechar
 # LOCALIZATION NOTE (error_version_info): "{{version}}" and "{{build}}" will be
 # replaced by the PDF.JS version and build ID.
-error_version_info=PDF.js v{{version}} (build: {{build}})
+error_version_info=PDF.js v{{version}} (compilação: {{build}})
 # LOCALIZATION NOTE (error_message): "{{message}}" will be replaced by an
 # english string describing the error.
 error_message=Mensagem: {{message}}
 # LOCALIZATION NOTE (error_stack): "{{stack}}" will be replaced with a stack
 # trace.
-error_stack=Stack: {{stack}}
+error_stack=Pilha: {{stack}}
 # LOCALIZATION NOTE (error_file): "{{file}}" will be replaced with a filename
 error_file=Arquivo: {{file}}
 # LOCALIZATION NOTE (error_line): "{{line}}" will be replaced with a line number
@@ -172,11 +172,11 @@ unexpected_response_error=Resposta inesperada do servidor.
 # Some common types are e.g.: "Check", "Text", "Comment", "Note"
 text_annotation_type.alt=[Anotação {{type}}]
 password_label=Forneça a senha para abrir este arquivo PDF.
-password_invalid=Senha inválida. Por favor, tente de novo.
+password_invalid=Senha inválida. Por favor, tentar de novo.
 password_ok=OK
 password_cancel=Cancelar
 
-printing_not_supported=Alerta: a impressão não é totalmente suportada neste navegador.
-printing_not_ready=Alerta: o PDF não está totalmente carregado para impressão.
-web_fonts_disabled=Fontes da web estão desativadas: não é possível usar fontes incorporadas do PDF.
-document_colors_not_allowed=Documentos PDF não estão autorizados a usar suas próprias cores: “Páginas podem usar outras cores” está desativado no navegador.
+printing_not_supported=Aviso: a impressão não é totalmente suportada neste navegador.
+printing_not_ready=Aviso: o PDF não está totalmente carregado para impressão.
+web_fonts_disabled=As fontes web estão desabilitadas: não foi possível usar fontes incorporadas do PDF.
+document_colors_not_allowed=Os documentos em PDF não estão autorizados a usar suas próprias cores: “Permitir que as páginas escolham suas próprias cores” está desabilitado no navegador.
