--- a/l10n/ur/viewer.properties
+++ b/l10n/ur/viewer.properties
@@ -19,12 +19,14 @@ next.title=اگلا صفحہ
 next_label=آگے
 
 # LOCALIZATION NOTE (page.title): The tooltip for the pageNumber input.
+page.title=صفحہ
 # LOCALIZATION NOTE (of_pages): "{{pagesCount}}" will be replaced by a number
 # representing the total number of pages in the document.
-of_pages={{pageCount}} کا
+of_pages={{pagesCount}} کا
 # LOCALIZATION NOTE (page_of_pages): "{{pageNumber}}" and "{{pagesCount}}"
 # will be replaced by a number representing the currently visible page,
 # respectively a number representing the total number of pages in the document.
+page_of_pages=({{pageNumber}} کا {{pagesCount}})
 
 zoom_out.title=باہر زوم کریں
 zoom_out_label=باہر زوم کریں
@@ -89,14 +91,18 @@ document_properties_version=PDF ورژن:
 document_properties_page_count=صفحہ شمار:
 document_properties_close=بند کریں
 
+print_progress_message=چھاپنے کرنے کے لیے دستاویز تیار کیے جا رھے ھیں
 # LOCALIZATION NOTE (print_progress_percent): "{{progress}}" will be replaced by
 # a numerical per cent value.
+print_progress_percent=*{{progress}}%*
+print_progress_close=منسوخ کریں
 
 # Tooltips and alt text for side panel toolbar buttons
 # (the _label strings are alt text for the buttons, the .title strings are
 # tooltips)
 toggle_sidebar.title=سلائیڈ ٹوگل کریں
 toggle_sidebar_label=سلائیڈ ٹوگل کریں
+document_outline.title=دستاویز کی سرخیاں دکھایں (تمام اشیاء وسیع / غائب کرنے کے لیے ڈبل کلک کریں)
 document_outline_label=دستاویز آؤٹ لائن
 attachments.title=منسلکات دکھائیں
 attachments_label=منسلکات
@@ -168,6 +174,7 @@ text_annotation_type.alt=[{{type}} نوٹ]
 password_label=PDF مسل کھولنے کے لیے پاس ورڈ داخل کریں.
 password_invalid=ناجائز پاس ورڈ. براےؑ کرم دوبارہ کوشش کریں.
 password_ok=سہی
+password_cancel=منسوخ کریں
 
 printing_not_supported=تنبیہ:چھاپنا اس براؤزر پر پوری طرح معاونت شدہ نہیں ہے۔
 printing_not_ready=تنبیہ: PDF چھپائی کے لیے پوری طرح لوڈ نہیں ہوئی۔
